--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.5rem;
+  font-size: 15pt;
   font-weight: bold;
 }
 a{
