--- a/style.css
+++ b/style.css
@@ -1,39 +1,65 @@
-body{
-  background: #1457A6;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 15pt;
-  font-weight: bold;
+.bg{
+/* Set up proportionate scaling */
+width: 100%;
+height: auto;
+
+/* Set up positioning */
+position: fixed;
+top: 0;
+left: 0;
 }
-a{
+form{
+  z-index: 1;
+  position: fixed;
+  margin-top: 380px;
+  margin-left: 10%;
+  margin-bottom: 100px;
+}
+
+.inputan{
+  position: absolute;
+  width: 200px;
+  margin-left: -200px;
+  border: none;
+  height: 20px;
+}
+.foot{
+  width: auto;
+  position: absolute;
+}
+.pass{
+  width: 120px;
+  position: absolute;
+  border: none;
+  margin-left: -205px;
+  height: auto;
+  margin-top: 9px;
+}
+.button{
+  width: 170px;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 3px;
+}
+.dua{
+  width: 70px;
+}
+svg{
   color: white;
-  text-decoration: none;
-  -webkit-animation: fade-in 1.9s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-	        animation: fade-in 1.9s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+width: 20px;
+height: auto;}
+.button:hover{
+  background: #b8d6ee;
 }
-@-webkit-keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
+
+@media screen and (min-width: 375px){
+  form{
+    margin-top: 430px;
   }
 }
-img{
-  width: 375px;
-  height: 100%;
-}
-@media and (max-width : 320px){
-  img{
-    width: 320px;
+
+@media screen and (min-width: 425px){
+  form{
+    margin-top: 460px;
   }
 }
